# dotnet

./: .gitignore  .gitmodules  Cargo.toml  README.md  dotnet.sln  omnisharp.json  rustfmt.toml
bridge/: Bridge.cs  bridge.csproj
bridge/BenchmarkDotNet.Artifacts/results/: Benchmarks.Marshal-report-github.md  Benchmarks.Marshal-report.csv  Benchmarks.Marshal-report.html  Benchmarks.Marshaller-report-github.md  Benchmarks.Marshaller-report.csv  Benchmarks.Marshaller-report.html
bridge/src/: Bridge.cs  BridgeObject.cs  BridgeObjectType.cs  BridgeResult.cs  BridgeString.cs  ClrObject.cs  ClrObject.cs.bak  Context.cs  Marshalling.cs
bridge/src/Benchmarks/: Marshal.cs  Program.cs
bridge/src/Marshaling/: Context.cs  Intrinsic.cs  Marshaler.cs  Methods.cs
bridge/src/Marshaling/Utilities/: Dynamic.cs
bridge/src/Utilities/: InvokeBuilder.cs  MethodResolver.cs
corehost/: Cargo.toml
corehost_sys/: Cargo.toml  build.rs
host/: Cargo.toml
host/benches/: prelim.rs
host/src/: lib.rs
host_coreclr/: Cargo.toml  build.rs
host_coreclr/src/: lib.rs
host_coreclr/tools/: nethost.csproj
hostfxr/: Cargo.toml  runtimeconfig.json
hostfxr/src/: build.rs  delegate.rs  error.rs  host.rs  hostfxr.rs  hresult.rs  lib.rs  library.rs  nethost.rs  parameters.rs  string.rs  symbol.rs  types.rs  wide.rs
hostfxr/tests/: host_tests.rs
hostfxr/tests/resources/: Program.cs  runtimeconfig.json
hostfxr_sys/: Cargo.toml  build.rs
hostfxr_sys/src/: lib.rs
nethost/: Cargo.toml
nethost-sys/: Cargo.toml  build.rs
nethost-sys/src/: nethost.csproj
nethost/src/: lib.rs
nethost_sys/: Cargo.toml  build.rs
nethost_sys/src/: lib.rs
runtime/: EntryPoint.cs
src/: class.rs  error.rs  exception.rs  gc.rs  lib.rs  marshal.rs  method.rs  object.rs  types.rs
src/host/: bridge.rs  mod.rs  result.rs
src/host/__/: bridge.rs
src/host/core/: mod.rs
src/runtime/: bridge.rs  hostfxr.rs  mod.rs
src/runtime/hostfxr/: mod.rs
