[package]
name = "dotnet"
version = "0.1.0"
edition = "2018"

[features]
default = ["rt_hostfxr"]
rt_hostfxr = ["dotnet_hostfxr"]

[dependencies]
cfg-if = "1.0"

anyhow = "1.0"
thiserror = "1.0"

once_cell = "1.8"

dotnet_hostfxr = { version="*", optional=true }

[workspace]
members = ["hostfxr", "hostfxr_sys"]

[patch.crates-io]
dotnet_hostfxr = { path="./hostfxr" }
dotnet_hostfxr_sys = { path="./hostfxr_sys" }
