[package]
name = "hostfxr"
version = "0.1.0"
authors = ["Marvin Countryman <marvinc@siqinc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6.2"
owning_ref = "0.4.1"
simple-error = "0.2.1"
nethost = { path = "../nethost" }
