[package]
name = "hostfxr"
version = "0.1.0"
authors = ["Marvin Countryman <me@maar.vin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6.2"
hostfxr_sys = { path = "../hostfxr_sys" }
simple-error = "0.2.1"
