[package]
name = "dotnet_hostfxr_sys"
version = "0.1.0"
authors = ["Marvin Countryman <marvinc@siqinc.com>"]
edition = "2018"

[features]
default = [
  # Defaults vary per-system, check build.rs for details
]

# Determines cpp runtime/nethost link type
static = []

[build-dependencies]
zip = "^0.5"
ureq = "^2.0"
json = "^0.12"
bindgen = "^0.56"
target-lexicon = "^0.11"
