[package]
name = "nethost_sys"
version = "0.1.0"
authors = ["Marvin Countryman <marvinc@siqinc.com>"]
edition = "2018"

[dependencies]
libc = "^0.2"
encoding_rs = "^0.8"

[build-dependencies]
zip = "^0.5"
cmake = "^0.1"
anyhow = "^1.0"
bindgen = "^0.56"

ureq = "^2.0"
json = "^0.12"
target-lexicon = "^0.11"
